Search Game Feature added

--- a/Languages/en-US.json
+++ b/Languages/en-US.json
@@ -30,5 +30,7 @@
   "PreparingData": "Preparing",
   "RestoringData": "Restoring Data",
   "ConnectionError": "Connection Error",
-  "DisableDLSS": "Disable DLSS"
+  "DisableDLSS": "Disable DLSS",
+  "Search": "Search",
+  "SearchGames": "Search games..."
 }
