--- a/Languages/pt-BR.json
+++ b/Languages/pt-BR.json
@@ -27,6 +27,7 @@
     "OpenSettings": "Configurações",
     "SelectGamePrompt": "Selecione um jogo para começar",
     "DownloadingData": "Baixando Dados",
+    "DownloadingUpdate": "Baixando Atualização",
     "PreparingData": "Preparando",
     "RestoringData": "Restaurando Dados",
     "ConnectionError": "Erro de Conexão",
