Notify Launcher in Loading State

--- a/Languages/en-US.json
+++ b/Languages/en-US.json
@@ -28,6 +28,7 @@
   "SelectGamePrompt": "Select a game to begin",
   "DownloadingData": "Downloading Data",
   "DownloadingUpdate": "Downloading Update",
+  "LoadingGames": "Loading Games...",
   "PreparingData": "Preparing",
   "RestoringData": "Restoring Data",
   "ConnectionError": "Connection Error",
