--- a/Languages/ja-JP.json
+++ b/Languages/ja-JP.json
@@ -28,6 +28,7 @@
     "SelectGamePrompt": "開始するにはゲームを選択してください",
     "DownloadingData": "データをダウンロード中",
     "DownloadingUpdate": "アップデートをダウンロード中",
+    "LoadingGames": "ゲームを読み込み中...",
     "PreparingData": "準備中",
     "RestoringData": "データを復元中",
     "ConnectionError": "接続エラー",
